<resources>
    <string name="logout_txt">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="orders">Orders</string>
    <string name="disputes">Disputes</string>
    <string name="items">Items</string>
    <string name="enter_mobile_Number">Enter Mobile Number</string>
    <string name="next">Next</string>
    <string name="area_name">Area Name</string>
    <string name="areas">Areas</string>
    <string name="area_id">Area ID</string>
    <string name="coupon_id">Coupon Id</string>
    <string name="coupon_value">Coupon Value</string>
    <string name="coupon_desc">Description</string>
    <string name="min_bill">Minimum Bill</string>
    <string name="del_charge">Delivery Charges</string>
    <string name="enter_oyp">Enter OTP</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_data">No Data</string>
    <string name="enter_valid_feilds">Enter valid fields</string>
    <string name="manager_name">Manager Name</string>
    <string name="change_number">Change \nNumber</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Retry</string>
    <string name="add_mannager_email">Add Manager Email</string>
    <string name="add_delivery_boy_email">Add Delivery Boy Email</string>
    <string name="delivery_boy">Delivery Boy</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="street">Street</string>
    <string name="locality">Locality</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="manager">Manager</string>
    <string name="coupon_name">Coupon Name</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="coupon_amount">Coupon Amount</string>
    <string name="coupon_details">Coupon Details</string>
</resources>
