<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccentLight"
    tools:context="com.app.farmfresh.auth.SignUpFragmentFragment">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_address_pincode"
            android:hint="@string/pincode"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_address_street"
            android:hint="@string/street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_address_locality"
            android:hint="@string/locality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_address_city"
            android:hint="@string/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_address_state"
            android:hint="@string/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_address_country"
            android:hint="@string/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <Button
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/btn_sign_up"
        android:text="@string/save"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
</layout>