<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentLight"
    tools:context=".fragmets.deliveryboys.DeliveyBoysHome">

   <LinearLayout
       android:orientation="vertical"
       android:gravity="center"
       style="@style/SelectorCard"
       android:layout_width="@dimen/selector_width_height_large"
       android:layout_height="@dimen/selector_width_height_large"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.15"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" >
       <ImageView
           android:src="@drawable/ic_notifications_active"
           android:layout_gravity="center"
           android:layout_width="@dimen/image_dimen_card"
           android:layout_height="@dimen/image_dimen_card"/>

      <TextView
          android:text="@string/notifications"
          android:layout_width="wrap_content"
          android:textColor="@color/colorWhite"
          android:layout_height="wrap_content"/>
   </LinearLayout>

   <LinearLayout
       android:orientation="vertical"
       style="@style/SelectorCard"
       android:gravity="center"
       android:layout_width="@dimen/selector_width_height_large"
       android:layout_height="@dimen/selector_width_height_large"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.85"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" >

      <ImageView
          android:src="@drawable/ic_shopping_basket"
          android:layout_gravity="center"
          android:layout_width="@dimen/image_dimen_card"
          android:layout_height="@dimen/image_dimen_card"/>

      <TextView
          android:text="@string/orders"
          android:layout_width="wrap_content"
          android:textColor="@color/colorWhite"
          android:layout_height="wrap_content"/>

   </LinearLayout>

   <Button
       android:id="@+id/btn_logout"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/logout_txt"
       style="@style/ButtonStyle"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.88" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>